fix favico, fix flex-wrap in sponsors, fix read-more in slideshow

--- a/src/style/parts/_sponsors.scss
+++ b/src/style/parts/_sponsors.scss
@@ -3,6 +3,7 @@
     flex-flow: row;
     margin-top: 15px;
     justify-content: space-around;
+    flex-wrap: wrap;
 }
 .brand {
     position: relative;
